Set up 256 color for vim in tmux and swapped split-pane keybindings.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,14 +1,15 @@
 # tmux configuration
 
 # key bindings
-bind - split-window -h
+bind | split-window -h
+bind - split-window -v
 unbind '"'
-bind | split-window -v
 unbind %
 
 
 # theme
 source-file "${HOME}/.tmux-themepack/powerline/block/blue.tmuxtheme"
+set -g default-terminal "xterm-256color"
 
 # enable mouse control (clickable windows, panes, etc.)
 set -g mouse
