--- a/tmux.conf
+++ b/tmux.conf
@@ -6,10 +6,19 @@ bind - split-window -v
 unbind '"'
 unbind %
 
-
 # theme
-source-file "${HOME}/.tmux-themepack/powerline/block/blue.tmuxtheme"
+set -g @themepack 'powerline/block/magenta'
 set -g default-terminal "xterm-256color"
+
+# plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'jimeh/tmux-themepack'
 
 # enable mouse control (clickable windows, panes, etc.)
 set -g mouse
+
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
