Remap tmux prefix to C-a from C-b because vim uses C-b.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,9 @@
 # tmux configuration
 
+# remap the prefix key
+set-option -g prefix C-a
+bind-key C-a last-window
+
 # key bindings
 bind | split-window -h
 bind - split-window -v
@@ -7,7 +11,7 @@ unbind '"'
 unbind %
 
 # theme
-set -g @themepack 'powerline/block/magenta'
+set -g @themepack 'powerline/block/blue'
 set -g default-terminal "xterm-256color"
 
 # plugins
