--- a/tmux.conf
+++ b/tmux.conf
@@ -11,7 +11,7 @@ unbind '"'
 unbind %
 
 # theme
-set -g @themepack 'powerline/block/blue'
+set -g @themepack 'powerline/double/magenta'
 set -g default-terminal "xterm-256color"
 
 # plugins
