Enable copying to clipboard in tmux panes.

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,6 +23,8 @@ set -g @plugin 'jimeh/tmux-themepack'
 # enable mouse control (clickable windows, panes, etc.)
 set -g mouse
 
+# enable copying to system clipboard
+bind -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
